[package]
name = "deasil"
version = "0.1.0"
authors = [
    "tatostao",
    "teki",
    "pierd",
]

[dependencies]
nalgebra = "0.16.2"
piston = "0.37.0"
piston2d-graphics = "0.26.0"
pistoncore-glutin_window = "0.47.0"
piston2d-opengl_graphics = "0.53.0"
rand = "0.5.5"
# sdl2 = { version = "0.31.0", default-features = false, features = ["gfx"] }
specs = "0.12.3"
specs-derive = "0.2.0"
